--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,275 @@
 */
 
 .page {
-  min-inline-size: 320px;
-  min-block-size: 100dvb;
+    font-family: var(--main-font), sans-serif, Asap;
+    background-image: var(--background-page);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    min-inline-size: 320px;
+    min-block-size: 100dvh;
+    font-variation-settings: "wght" var(--text-weight);
 }
+
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    gap: 20px;
+    margin: 100px 0 94px;
+    border: 2px solid var(--border-color);
+    border-radius: 0;
+    padding-inline: clamp(1rem, -1.344rem + 10vw, 7.656rem);
+    padding-block: clamp(7.625rem, 7.449rem + 0.75vw, 8.125rem);
+    background-color: var(--header-back-color);
+    inline-size: var(--block-inline-size);
+}
+
+.header__block__title {
+    display: flex;
+    align-items: flex-end;
+    color: var(--page-text-color);
+    font-family: var(--accent-font), fantasy, Press Start Regular;
+    font-weight: 400;
+    font-size: clamp(3.063rem, 2.71rem + 1.5vw, 4.063rem);
+    font-style: normal;
+    line-height: 100%;
+    text-transform: uppercase;
+}
+
+.header__block__text {
+    color: var(--page-text-color);
+    font-family: var(--accent-font), fantasy, Press Start Regular;
+    font-weight: 400;
+    font-size: clamp(0.875rem, 0.677rem + 0.85vw, 1.438rem);
+    font-style: normal;
+    line-height: 100%;
+    text-transform: uppercase;
+}
+
+.card {
+    justify-self: center;
+    margin-bottom: 50px;
+    border: 2px solid var(--border-color);
+    background-color: var(--card-back-color);
+    inline-size: var(--block-inline-size);
+}
+.card__img__container {
+    position: relative;
+    border-top: 2px solid var(--border-color);
+    border-bottom: 2px solid var(--border-color);
+}
+
+.card__img__container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-image: url(../images/Auto.png);
+    background-size: cover;
+}
+.card__img {
+    display: block;
+    width: calc(var(--block-inline-size) - 3px);
+    object-fit: cover;
+    object-position: center;
+}
+
+.watermark {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+    opacity: 0.5;
+    color: #000000;
+    font-family: var(--accent-font), fantasy, Press Start Regular;
+    font-weight: 400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 14px;
+    text-transform: uppercase;
+    text-shadow: -1px 0 var(--stroke-color), 0 1px var(--stroke-color), 1px 0 var(--stroke-color), 0 -1px var(--stroke-color);
+    mix-blend-mode: hard-light;
+}
+
+@supports ((text-stroke: 1px var(--stroke-color)) or (-webkit-text-stroke: 1px var(--stroke-color))) {
+    .watermark {
+        text-shadow: none;
+        -webkit-text-stroke: 1px var(--stroke-color);
+        text-stroke: 1px var(--stroke-color);
+    }
+}
+
+.card__title {
+    padding-inline: 10px;
+    padding-block: 5px;
+    color: var(--page-text-color);
+    font-family: var(--main-font), sans-serif, Asap;
+
+    font-size: 18px;
+    font-style: normal;
+    line-height: 22px;
+    font-variation-settings: "slnt" 0, "wght" var(--title-weight);
+}
+.card__description {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+    padding: 30px 25px;
+}
+
+.card__text {
+    color: var(--page-text-color);
+    font-family: var(--main-font), sans-serif, Asap;
+    font-size: 18px;
+    font-style: normal;
+    line-height: 117%;
+}
+
+.button__container {
+    display: flex;
+    justify-content: flex-end;
+    gap: 7px;
+}
+.card__icon-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 2px transparent;
+
+    background: var(--card-back-color);
+    transition: border 0.3s ease;
+}
+.page__button {
+    border: 2px solid var(--border-color);
+    background: var(--card-back-color);
+}
+.card__like-button {
+    width: 130px;
+    height: 38px;
+    padding: 9px 10px;
+}
+.like-icon {
+    height: 35px;
+    margin: auto;
+    aspect-ratio: 1/1;
+}
+.button__text {
+    position: relative;
+    color: var(--button-text-color);
+    font-family: var(--accent-font), fantasy, Press Start Regular;
+    font-weight: 400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 90%;
+    mix-blend-mode: difference;
+}
+
+.save-button {
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 100px;
+    padding: 16px 18px 14px 18px;
+}
+
+.popover__text {
+    color: var(--page-text-color);
+    font-family: var(--accent-font), fantasy, Press Start Regular;
+    font-weight: 400;
+    font-size: 14px;
+    font-style: normal;
+    line-height: 150%;
+    text-transform: uppercase;
+}
+
+.no-discket[open] {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    grid-template-rows: 1fr min-content;
+    gap: 20px 30px;
+    border: 2px solid var(--border-color);
+    padding: 28px;
+    inline-size: clamp(21.313rem, 21.048rem + 1.13vw, 22.063rem);
+}
+.no-discket[open]::backdrop {
+    background-color: var(--backdrop-color);
+}
+.popover__form {
+    grid-column: span 2;
+}
+.popover__button {
+    width: 100%;
+    height: 38px;
+    padding: 9px 35px;
+}
+
+.discket {
+    z-index: 1;
+    align-self: center;
+    fill: var(--button-text-color);
+    mix-blend-mode: difference;
+    width: 22px;
+    height: 21px;
+}
+.no-discket[open] .discket {
+    width: 40px;
+    height: 39px;
+}
+
+.saturate-bright {
+    filter: saturate(300%) brightness(150%);
+}
+.grayscale {
+    filter: grayscale(100%);
+}
+.contrast {
+    filter: contrast(150%) brightness(40%);
+}
+.invert {
+    filter: invert(10%);
+}
+.blur-contrast {
+    filter: blur(5px) contrast(150%);
+}
+.sepia {
+    filter: sepia(1.7);
+}
+.hue-rotate {
+    filter: hue-rotate(0.7turn);
+}
+.sparks {
+    opacity: 0;
+}
+@media (prefers-reduced-motion: reduce) {
+    .card__img {
+        display: none;
+    }
+    .card__img__container::before {
+        opacity: 1;
+    }
+    .card__img__container {
+        aspect-ratio: 1/1;
+    }
+}
+@media (max-width: 375px) {
+    .header {
+        margin-bottom: 96px;
+    }
+    .save-button {
+        flex-direction: column;
+    }
+    .discket {
+        width: 29px;
+        height: 28px;
+    }
+    .no-discket[open] {
+        padding: 30px 36px;
+    }
+}
+
