--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,21 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --main-font: "Inter";
+    --accent-font: "Press Start 2P";
+    --title-weight: 715;
+    --text-weight: 410;
+    --background-page: repeating-linear-gradient(to right, #d3d3d3 0px 2px, transparent 2px 4px), repeating-linear-gradient(to bottom, #d3d3d3 0px 2px, transparent 2px 4px), linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+    --block-inline-size: clamp(min(100%, 23.438rem), 16.285rem + 30.52vw, 43.75rem);
+    --stroke-color: #fff;
+    --button-text-color: #fff;
+    --page-text-color: #000;
+    --main-body-heart-color: transparent;
+    --core-heart-color: transparent;
+    --contour-color: #000;
+    --hover-heart-color: #000;
+    --animation-fill-color: red;
+    --header-back-color: #fff;
+    --card-back-color: #fff;
+    --border-color: #000;
+    --backdrop-color: rgb(0 0 0/ 0.75);
+}
